<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qizit</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_progress">Progresos</string>
    <string name="action_howToPlay">Cómo Jugar</string>
    <string name="action_aboutUs">Sobre Nosotros</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="onePlayer">Un Jugador</string>
    <string name="multiplayer">Multijugador</string>
    <string name="time">Tiempo</string>
    <string name="welcome">Bienvenido a Qizit</string>
    <string name="title_activity_progress">Progress</string>
    <string name="restartScores">Restablecer Puntuaciones</string>
    <string name="restartScoresInf">Eliminará todas las puntuaciones guardadas</string>
    <string name="btnDelete">Eliminar</string>
    <string name="menu_logout_text">Log Out</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="vibrationOption">Vibración</string>
    <string name="soundOption">Sonido</string>
    <string name="category_videogames">Videojuegos</string>
    <string name="category_cinema">Cine</string>
    <string name="cetegory_tv">Televisión</string>
    <string name="category_music">Música</string>
    <string name="category_tecnology">Tecnología</string>
    <string name="category_science">Ciencia</string>
    <string name="category_world">Mundo</string>
    <string name="category_art">Arte</string>
    <string name="category_literature">Literatura</string>
    <string name="title_activity_puntuations">Puntuations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play_normal">PlayNormal</string>

</resources>
