<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/Progress"
        android:title="@string/action_progress"
        app:showAsAction="never" />
    <item
        android:id="@+id/How_Play"
        android:title="@string/action_howToPlay"
        app:showAsAction="never" />
    <item
        android:id="@+id/About_us"
        android:title="@string/action_aboutUs"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/menu_logout_text"
        app:showAsAction="never" />
</menu>
